# Clippet

./: .gitignore  CLAUDE.md  Cargo.toml  PLAN.md  README.md  build.rs
.github/workflows/: pages.yml  release.yml
assets/: clippet.manifest
site/: index.html  robots.txt  sitemap.xml  styles.css
src/: clipboard.rs  footer.rs  listbox.rs  main.rs  paste.rs  search.rs  state.rs  storage.rs  theme.rs  titlebar.rs  tray.rs  util.rs
